Proyecto/IceePeeCee/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
E:\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
E:\BlueJ\lib\bluejcore.jar;E:\BlueJ\lib\javafx-base-20.0.1-win.jar;E:\BlueJ\lib\javafx-base-20.0.1.jar;E:\BlueJ\lib\javafx-controls-20.0.1-win.jar;E:\BlueJ\lib\javafx-controls-20.0.1.jar;E:\BlueJ\lib\javafx-fxml-20.0.1-win.jar;E:\BlueJ\lib\javafx-graphics-20.0.1-win.jar;E:\BlueJ\lib\javafx-graphics-20.0.1.jar;E:\BlueJ\lib\javafx-media-20.0.1-win.jar;E:\BlueJ\lib\javafx-media-20.0.1.jar;E:\BlueJ\lib\javafx-swing-20.0.1-win.jar;E:\BlueJ\lib\javafx-web-20.0.1-win.jar;E:\BlueJ\lib\junit-4.12.jar;E:\BlueJ\lib\junit-jupiter-5.5.2.jar;E:\BlueJ\lib\junit-jupiter-api-5.5.2.jar;E:\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;E:\BlueJ\lib\junit-jupiter-params-5.5.2.jar;E:\BlueJ\lib\junit-platform-commons-1.5.2.jar;E:\BlueJ\lib\junit-platform-engine-1.5.2.jar;E:\BlueJ\lib\junit-platform-launcher-1.5.2.jar;E:\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;E:\BlueJ\lib\junit-vintage-engine-5.5.2.jar;E:\BlueJ\lib\hamcrest-core-1.3.jar;E:\BlueJ\lib\opentest4j-1.2.0.jar;E:\BlueJ\lib\lang-stride.jar;C:\Users\camil\OneDrive\Escritorio\shapes
-d
C:\Users\camil\OneDrive\Escritorio\shapes\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\camil\OneDrive\Escritorio\shapes\Flight.java
<---- end of javadoc command ---->
Loading source file C:\Users\camil\OneDrive\Escritorio\shapes\Flight.java...
Constructing Javadoc information...
C:\Users\camil\OneDrive\Escritorio\shapes\Flight.java:18: error: cannot find symbol
    Map<String,String> flightDictionary = new HashMap<>();
    ^
  symbol:   class Map
  location: class Flight
1 error
